[package]
name = "msod-stat"
version = "0.1.4"
authors = ["Jonathan Giddy <jongiddy@gmail.com>"]
edition = "2018"

[dependencies]
directories = "~3.0"
failure = "~0.1"
http = "~0.2"
indicatif = "~0.16"
jemallocator = "~0.3"
oauth2 = "~4.0"
open = "~1.7"
rand = "~0.8"
reqwest = "~0.11"
serde = "~1.0"
serde_cbor = "~0.11"
serde_derive = "~1.0"
serde_json = "~1.0"
string-error = "~0.1"
tiny_http = "~0.6"
url = "~1.7"
