[package]
name = "msod-stat"
version = "0.1.6"
authors = ["Jonathan Giddy <jongiddy@gmail.com>"]
edition = "2018"

[dependencies]
directories = "~4.0"
eyre = "0.6.5"
failure = "~0.1"
http = "~0.2"
indicatif = "~0.16"
jemallocator = "~0.3"
oauth2 = "4.1.0"
open = "2.0.0"
reqwest = "~0.11"
serde = "~1.0"
serde_cbor = "~0.11"
serde_derive = "~1.0"
serde_json = "~1.0"
string-error = "~0.1"
tempfile = "3.2.0"
tiny_http = "0.9.0"
url = "2.2.2"
